cf_analysis_results/checkerframework_3.42.0_results_WPI/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8.txt
../dataset/june2020_dataset/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8/src/com/alibaba/DataRead.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader("E:\\workspace\\alibaba\\t_alibaba_data.csv") $$ java.io.FileReader $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 505, 565 ) $$ @MustCall method close may not have been invoked on new FileReader("E:\\workspace\\alibaba\\t_alibaba_data.csv") or any of its aliases.
            br = new BufferedReader(new FileReader("E:\\workspace\\alibaba\\t_alibaba_data.csv"));
                                    ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
1 error
